# pytorch-CycleGAN-and-pix2pix

./: .gitignore  .pre-commit-config.yaml  .replit  .travis.yml  3D_Image_Visualization.ipynb  BasisGan.ipynb  CGAN_pix2pix.py  COPD slices check network results.ipynb  CycleGAN visualize COPD lung slices.ipynb  CycleGAN.ipynb  CycleGAN_Visualization.ipynb  CycleGan.ipynb  Cycle_Gan(generator+forward).ipynb  DamageGAN_README.md  Dockerfile  Find emphysema threshold.ipynb  L1_losses.ipynb  LICENSE  P Lohith Reddy  Pix2Pix.ipynb  README.md  RUN_COMMANDS  Separate GOLD scores.ipynb  Visualize CycleGAN checkpoints (emphysema frangi).ipynb  Visualize CycleGAN checkpoints (emphysema).ipynb  Visualize data loader files.ipynb  adapter_dataset-Copy1.py  av_scene_test_map_encoder.py  avsg_run_check_discr.py  avsg_run_check_map_enc.py  avsg_test.py  avsg_test_map_encoder.py  avsg_train.py  avsg_utils.py  avsg_visualization_utils.py  ca_token.sh  compose.yml  deploy.sh  distributions.ipynb  docker-compose.yml  (+50 more)
.devcontainer/: Dockerfile  bashrc.sh  devcontainer.json  update-bashrc.sh
.ipynb_checkpoints/: Find emphysema threshold-checkpoint.ipynb  Visualize CycleGAN checkpoints (emphysema)-checkpoint.ipynb  pix2pix_#2-checkpoint.ipynb  test-checkpoint.sh  train-checkpoint.sh
N_channels/: util-Copy1.py
OLD/: av_scenarios_networks_old.py  common.py  global_graph.py  global_graph_map.py
data/: __init__.py  adapterL1_dataset.py  adapter_dataset.py  adapterfull1_dataset.py  adapterfull_dataset.py  aligned2_dataset.py  aligned_data_loader.py  aligned_dataset.py  av_scenarios_dataset.py  (+42 more)
(+1124 files in other folders)
